crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task__dependents__can_set_deep_depth_affected.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(deps-affected)"]
    2 [ label="RunTask(deps-affected:c)"]
    3 [ label="RunTask(deps-affected:b)"]
    4 [ label="RunTask(deps-affected:a)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
    3 -> 2 [ label="required"]
}
